@@ -7,7 +7,9 @@ import com.cydeo.service.UserService;
 import com.cydeo.util.MapperUtil;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -29,10 +31,12 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public void save(UserDto userDto) {
+        if (!userDto.getPassword().equals(userDto.getConfirmPassword())) {
+            throw new IllegalArgumentException("Passwords do not match");
+        }
+
         User user = mapperUtil.convert(userDto, new User());
         userRepository.save(user);
-
-
     }
 
     @Override
@@ -40,6 +44,7 @@ public class UserServiceImpl implements UserService {
         User user = mapperUtil.convert(userDto, new User());
         userRepository.save(user);
     }
+
 
     @Override
     public UserDto findById(Long id) {
@@ -51,20 +56,52 @@ public class UserServiceImpl implements UserService {
     public List<UserDto> findAll() {
         return userRepository.findAll().stream()
                 .map(user -> mapperUtil.convert(user, new UserDto()))
-                .toList();
+                .sorted(Comparator.comparing(UserDto::getCompanyName)
+                        .thenComparing(UserDto::getRoleDescription))
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<UserDto> findByCompanyId(Long companyId) {
         return userRepository.findByCompany_Id(companyId).stream()
                 .map(user -> mapperUtil.convert(user, new UserDto()))
-                .toList();
+                .sorted(Comparator.comparing(UserDto::getRoleDescription))
+                .collect(Collectors.toList());
     }
 
     @Override
-    public void deleteUser(Long id){
+    public void deleteUser(Long id) {
 
+        User user = userRepository.findById(id).orElseThrow(IllegalArgumentException::new);
+        user.setDeleted(true);
+        userRepository.save(user);
     }
 
+    @Override
+    public boolean emailExists(String email) {
+        return userRepository.findByUsername(email) != null;
+    }
+
+
+    @Override
+    public boolean isOnlyAdmin(UserDto userDto) {
+        return userRepository.isOnlyAdminInCompany(userDto.getCompany().getId());
+    }
+
+
+    @Override
+    public boolean isPasswordMatched(String password, String confirmPassword) {
+        return password != null && password.equals(confirmPassword);
+    }
+
+
+    @Override
+    public List<UserDto> findAllByRoleDescription(String role) {
+        return userRepository.findAllByRoleDescription(role).stream()
+                .map(user -> mapperUtil.convert(user, new UserDto()))
+                .sorted(Comparator.comparing(UserDto::getCompanyName)
+                        .thenComparing(UserDto::getRoleDescription))
+                .collect(Collectors.toList());
+    }
 
 }
